
public class StringBus
{
    public const string ANIM_DEATH_2 = "Death";
    public const string ANIM_REACTION_HIT = "Hit";
    public const string ANIM_AIM_RIFLE = "Aiming";
    public const string ANIM_MOVE = "Speed";
    public const string ANIM_JUMP = "Jump";
    public const string ANIM_SPRINT = "Sprint";
    public const string ANIM_RELOAD_RIFLE = "Reload";
    public const string ANIM_ATTACK_HANDS = "Attack";
    public const string ANIM_WITH_RIFLE = "WithRifle";

    public const string SAVE_WINS_COUNT = "WINS_COUNT";
    public const string SAVE_DEFEATS_COUNT = "DEFEATS_COUNT";
}
